<resources>
    <string name="app_name">Mango</string>
    <!-- Regular UI text -->
    <string name="action_settings">Settings</string>
    <string name="menu_login">Log in</string>
    <string name="menu_logout">Log out</string>
    <string name="login_label">Log In</string>
    <string name="email_label">Email</string>
    <string name="password_label">Password</string>
    <string name="send_text">Send</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean nec condimentum ante, quis mattis mi. Proin ut rhoncus libero, ac euismod neque. Ut suscipit, enim a facilisis consequat, orci lacus venenatis orci, at ultricies orci nulla sed ex. In condimentum viverra velit, eget feugiat libero imperdiet vel. Aenean pretium, lectus vitae bibendum bibendum, diam turpis convallis eros, quis tristique leo sapien at ipsum. Praesent eu odio id nulla lobortis auctor. Donec eget dolor eget nisl euismod commodo vel a lacus. Quisque ut justo vitae urna pharetra accumsan. Etiam dignissim neque iaculis mauris viverra, blandit rhoncus odio porttitor. Phasellus nibh arcu.</string>
    <string name="title_sign_in">Welcome</string>
    <string name="sign_up">Sign Up</string>
    <string name="hint_password">password</string>
    <string name="hint_email">email</string>
    <string name="sign_in">Sign In</string>
    <string name="heading_recent">Recent</string>
    <string name="heading_my_posts">My Posts</string>
    <string name="heading_my_top_posts">My Top Posts</string>
    <string name="welcome">Welcome </string>

    <string name="id_fmt">User ID: %s</string>
    <string name="email_fmt">Email: %s</string>
    <string name="INSY2303">INSY 2303</string>
    <string name="INSY3300">INSY 3300</string>
    <string name="INSY3303">INSY 3303</string>
    <string name="INSY3304">INSY 3304</string>
    <string name="INSY3305">INSY 3305</string>
    <string name="INSY3330">INSY 3330</string>
    <string name="INSY4305">INSY 4305</string>
    <string name="INSY4306">INSY 4306</string>
    <string name="INSY4308">INSY 4308</string>
    <string name="INSY4315">INSY 4315</string>
    <string name="INSY4325">INSY 4325</string>
    <string name="signOut">Sign Out</string>

</resources>
