<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ClassListActivity"
    android:background="#eaeaea">

    <TextView
        android:text=""
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:id="@+id/username"
        android:layout_marginTop="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="Choose a class"
        android:id="@+id/smallText"
        android:textColor="#757575"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="28dp" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="500dp"
        android:id="@+id/scrollView"
        android:paddingTop="80dp"
        android:scrollbars="none"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/INSY2303"
            android:id="@+id/class1"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:layout_gravity="center_horizontal"
            android:ems="15"
            android:textColor="#ffffff"
            android:background="#283593"
            android:elevation="2dp"/>
        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/INSY3300"
            android:id="@+id/class2"
            android:layout_below="@+id/class1"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:layout_gravity="center_horizontal"
            android:ems="15"
            android:textColor="#ffffff"
            android:background="#283593"
            android:elevation="2dp"/>

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/INSY3303"
            android:id="@+id/class3"
            android:layout_below="@+id/class2"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:layout_gravity="center_horizontal"
            android:ems="15"
            android:textColor="#ffffff"
            android:background="#283593"
            android:elevation="2dp"/>


        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/INSY3304"
            android:id="@+id/class4"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/class3"
            android:layout_alignEnd="@+id/smallText"
            android:layout_gravity="center_horizontal"
            android:ems="15"
            android:textColor="#ffffff"
            android:background="#283593"
            android:elevation="2dp"/>

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/INSY3305"
            android:id="@+id/class5"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/class4"
            android:layout_alignEnd="@+id/smallText"
            android:layout_gravity="center_horizontal"
            android:ems="15"
            android:textColor="#ffffff"
            android:background="#283593"
            android:elevation="2dp"/>
        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/INSY3300"
            android:id="@+id/class6"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/class5"
            android:layout_alignEnd="@+id/smallText"
            android:layout_gravity="center_horizontal"
            android:ems="15"
            android:textColor="#ffffff"
            android:background="#283593"
            android:elevation="2dp"/>
        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/INSY3330"
            android:id="@+id/class7"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/class6"
            android:layout_alignEnd="@+id/smallText"
            android:layout_gravity="center_horizontal"
            android:ems="15"
            android:textColor="#ffffff"
            android:background="#283593"
            android:elevation="2dp"/>
        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/INSY4305"
            android:id="@+id/class8"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/class7"
            android:layout_alignEnd="@+id/smallText"
            android:layout_gravity="center_horizontal"
            android:ems="15"
            android:textColor="#ffffff"
            android:background="#283593"
            android:elevation="2dp"/>
        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/INSY4306"
            android:id="@+id/class9"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/class8"
            android:layout_alignEnd="@+id/smallText"
            android:layout_gravity="center_horizontal"
            android:ems="15"
            android:textColor="#ffffff"
            android:background="#283593"
            android:elevation="2dp"/>
        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/INSY4308"
            android:id="@+id/class10"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/class9"
            android:layout_alignEnd="@+id/smallText"
            android:layout_gravity="center_horizontal"
            android:ems="15"
            android:textColor="#ffffff"
            android:background="#283593"
            android:elevation="2dp"/>
        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/INSY4315"
            android:id="@+id/class11"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/class10"
            android:layout_alignEnd="@+id/smallText"
            android:layout_gravity="center_horizontal"
            android:ems="15"
            android:textColor="#ffffff"
            android:background="#283593"
            android:elevation="2dp"/>
        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/INSY4325"
            android:id="@+id/class12"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/class11"
            android:layout_alignEnd="@+id/smallText"
            android:layout_gravity="center_horizontal"
            android:ems="15"
            android:textColor="#ffffff"
            android:background="#283593"
            android:elevation="2dp"/>


    </LinearLayout>
    </ScrollView>


</RelativeLayout>
